--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -34,6 +34,12 @@
             android:hint="danmaku"
             android:maxLines="1" />
 
+        <CheckBox
+            android:id="@+id/cb_videoOnly"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="video only" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
