--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -13,8 +13,8 @@
         android:orientation="vertical"
         tools:context=".ui.play.PlayActivity">
 
-        <com.shuyu.gsyvideoplayer.video.StandardGSYVideoPlayer
-            android:id="@+id/gsy"
+        <com.google.android.exoplayer2.ui.PlayerView
+            android:id="@+id/pv"
             android:layout_width="match_parent"
             android:layout_height="250dp" />
 
@@ -42,6 +42,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="pause"
+                android:textColor="@android:color/black" />
+
+            <Button
+                android:id="@+id/btn_download"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/download"
                 android:textColor="@android:color/black" />
 
         </LinearLayout>
