--- a/app/src/main/res/layout/layout_video.xml
+++ b/app/src/main/res/layout/layout_video.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
 
     </data>
@@ -23,11 +25,12 @@
             android:layout_below="@id/iv"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
+            android:layout_toEndOf="@id/civ_face"
             android:textColor="@android:color/black"
             android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/tv_duration"
+            android:id="@+id/tv_cover_left_text_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/iv"
@@ -37,15 +40,45 @@
             android:textColor="@android:color/white" />
 
         <TextView
-            android:id="@+id/tv_count"
+            android:id="@+id/tv_cover_left_text_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/iv"
             android:layout_marginStart="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_toEndOf="@id/tv_duration"
+            android:layout_toEndOf="@id/tv_cover_left_text_1"
             android:background="@drawable/bg_text"
             android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/tv_cover_left_text_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/iv"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@id/tv_cover_left_text_2"
+            android:background="@drawable/bg_text"
+            android:textColor="@android:color/white" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/civ_face"
+            android:layout_width="@dimen/face_size_small"
+            android:layout_height="@dimen/face_size_small"
+            android:layout_below="@id/iv"
+            android:layout_marginTop="5dp"
+            app:civ_border_color="@color/colorPrimaryDark"
+            app:civ_border_width="2dp" />
+
+        <TextView
+            android:id="@+id/tv_up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_title"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_toEndOf="@id/civ_face"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/tv_badge"
@@ -53,7 +86,6 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/iv"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp" />
+            android:layout_marginTop="5dp" />
     </RelativeLayout>
 </layout>
