--- a/app/src/main/res/layout/notification_video_download.xml
+++ b/app/src/main/res/layout/notification_video_download.xml
@@ -14,14 +14,15 @@
             style="@style/TextAppearance.Compat.Notification.Title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:maxLines="1" />
 
         <TextView
             android:id="@+id/tv_total_info"
             style="@style/TextAppearance.Compat.Notification.Info"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:gravity="end" />
     </LinearLayout>
 
@@ -89,37 +90,6 @@
 
     <ProgressBar
         android:id="@+id/pb_audio"
-        style="@android:style/Widget.Material.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:indeterminate="true"
-        android:indeterminateTint="@color/colorAccent"
-        android:progressTint="@color/colorAccent" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            style="@style/TextAppearance.Compat.Notification.Info"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="danmaku.xml" />
-
-        <TextView
-            android:id="@+id/tv_danmaku_speed"
-            style="@style/TextAppearance.Compat.Notification.Info"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end" />
-    </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/pb_danmaku"
         style="@android:style/Widget.Material.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
